--- a/src/pages/care-plan/su-goals/su-goals-multi-view.html
+++ b/src/pages/care-plan/su-goals/su-goals-multi-view.html
@@ -188,7 +188,7 @@
         this.$.editModal.toggle();
       },
       deleteGoal:function(){
-        this.fire("deletGoal");
+        this.fire("deleteGoal");
         this.$.editModal.toggle();
       },
       _computeGoalImage:function(cat){
