--- a/src/pages/care-plan/su-care-review/dependencies.html
+++ b/src/pages/care-plan/su-care-review/dependencies.html
@@ -7,6 +7,7 @@
 
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
+<link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
 <link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
