--- a/src/my-app.html
+++ b/src/my-app.html
@@ -403,7 +403,7 @@
                     <paper-item class="notifyText">
                       [[guueyNotify.message]]
                       <paper-button class="notifyButton" on-tap="dismissNotification">dismiss</paper-button>
-                      <a style="text-decoration:none;" class="inherit" href="[[notification.url]]">
+                      <a style="text-decoration:none;" class="inherit" href="[[guueyNotify.url]]">
                         <paper-button class="notifyButton">check</paper-button>
                       </a>
                     </paper-item>
