--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -48,7 +48,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height:1px;
         margin-top:25px;
         margin-bottom:25px;
-        background-color:#e0e0e0;
+        border-bottom:1px solid #e0e0e0;
         display:inline-block;
       }
 
@@ -170,17 +170,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color:#3d4ba8;
         color:#FFF;
       }
+      .guuey-danger-modal h2{
+        margin:0;
+        background-color:#FF0000;
+        color:#FFF;
+      }
       .modal-date-input{
         --date-paper-input-style:{
           margin-right:20px;
           margin-left:20px;
         };
       }
+      .guuey-add-modal paper-button{
+        color:#673AB7;
+      }
       .guuey-view-modal paper-button{
         color:#3d4ba8;
       }
-      .guuey-add-modal paper-button{
-        color:#673AB7;
+      .guuey-danger-modal paper-button{
+        color:#FF0000;
+      }
+      .guuey-danger-modal #dangerCancel{
+        color:#009688;
       }
       .guuey-modal{
         --paper-dialog:{
