--- a/src/pages/admin/ad-payment/dependencies.html
+++ b/src/pages/admin/ad-payment/dependencies.html
@@ -6,9 +6,18 @@
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
+<link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
+<link rel="import" href="../../../../bower_components/paper-radio-button/paper-radio-button.html" />
+<link rel="import" href="../../../../bower_components/gold-cc-cvc-input/gold-cc-cvc-input.html" />
+<link rel="import" href="../../../../bower_components/gold-cc-expiration-input/gold-cc-expiration-input.html" />
+<link rel="import" href="../../../../bower_components/gold-cc-input/gold-cc-input.html" />
+<link rel="import" href="../../../../bower_components/gold-email-input/gold-email-input.html" />
+<link rel="import" href="../../../../bower_components/gold-phone-input/gold-phone-input.html" />
+<link rel="import" href="../../../../bower_components/gold-zip-input/gold-zip-input.html" />
 
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../elements/media-queries/media-queries.html" />
+<link rel="import" href="../../../elements/guuey-stripe/guuey-stripe.html" />
 
 <link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
 <link rel="import" href="../../../behaviors/admin-resize-behavior.html" />
